OK, that last commit messed everything up. I think this one should now be lab6 AND ass4, working. It's hard to tell, becuase the oit DB server can't be reached from home.

--- a/CST65Project/css/DefaultStyles.css
+++ b/CST65Project/css/DefaultStyles.css
@@ -27,7 +27,13 @@ footer{
 }
 
 .rightAlign{
-    width: 100px;
+    width: 120px;
     display: inline-block;
     text-align: right;
+}
+
+#pageContainer{
+    width: 1004px;
+    margin-left: auto;
+    margin-right: auto;   
 }
