--- a/CST65Project/css/DefaultStyles.css
+++ b/CST65Project/css/DefaultStyles.css
@@ -37,3 +37,14 @@ footer{
     margin-left: auto;
     margin-right: auto;   
 }
+
+.navigation a:link{
+    color: #FFBF89
+}
+.navigation a:visited{
+    color: #552D0B
+}
+
+.navigation{
+    color: #000000;
+}
