--- a/CST65Project/App_Master/BaseTemplate.Master
+++ b/CST65Project/App_Master/BaseTemplate.Master
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <link type="text/css" rel="stylesheet" href="../css/DefaultStyles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <asp:ContentPlaceHolder ID="ContentPlaceHolderHead" runat="server">
     </asp:ContentPlaceHolder>
@@ -21,14 +22,16 @@
                 <asp:ContentPlaceHolder ID="ContentPlaceHolderNav" runat="server">
                 </asp:ContentPlaceHolder>
             </nav>
-            
-            <form id="form1" runat="server">               
-            <asp:SiteMapDataSource ID="masterPageNaivagtionDataSource" StartingNodeUrl="~/Default.aspx" ShowStartingNode="false" runat="server" />
-            <asp:Menu ID="navigationMenue" CssClass="navigation" DataSourceID="masterPageNaivagtionDataSource" Orientation="Horizontal" runat="server" />
-            <asp:SiteMapPath ID="masterPageNavigation" CssClass="navigation" PathSeparator=" | " runat="server" /> 
+
+            <form id="form1" runat="server">
+                <asp:SiteMapDataSource ID="masterPageNaivagtionDataSource" StartingNodeUrl="~/Default.aspx" ShowStartingNode="false" runat="server" />
+                <asp:Menu ID="navigationMenue" CssClass="navigation" DataSourceID="masterPageNaivagtionDataSource" Orientation="Horizontal" runat="server" />
+                <asp:SiteMapPath ID="masterPageNavigation" CssClass="navigation" PathSeparator=" | " runat="server" />
                 <br />
 
                 <div>
+                    <asp:ScriptManager ID="masterScriptManager" runat="server">
+                    </asp:ScriptManager>
                     <asp:ContentPlaceHolder ID="ContentPlaceHolderForm1" runat="server">
                     </asp:ContentPlaceHolder>
                 </div>
